# rust-lime

./: Cargo.toml  README.md
examples/: http.rs
resources/: Home_LIME_Protocol.html
src/: client.rs  lib.rs  server.rs
src/client/: mod.rs
src/envelope/: codec.rs  helper.rs  macros.rs  mod.rs  reason.rs  ser.rs  session.rs
src/envelope/command/: mod.rs  ser.rs
src/envelope/message/: mod.rs
src/envelope/notification/: mod.rs  ser.rs
src/envelope/resources/: mod.rs
src/envelope/session/: mod.rs  ser.rs
src/frames/: message.rs  mod.rs
src/lime/: codec.rs  command.rs  envelope.rs  helper.rs  message.rs  mod.rs  notification.rs  session.rs
src/net/: mod.rs  node.rs
src/server/: handshake.rs  mod.rs  node.rs
src/user/: mod.rs
src/utils/: mod.rs
tests/: deserialization.rs
