[package]
name = "protocol_manager"
version = "0.1.0"
authors = ["kibbles <colindjk@gmail.com>"]

[dependencies]
futures = "0.1.4"
tokio-core = "0.1.2"
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
tokio-minihttp = { git = "https://github.com/tokio-rs/tokio-minihttp" }
maud = "0.14.0"

serde = "0.8"
serde_json = "0.8"
serde_derive = "0.8"
serde_urlencoded = "0.2.1"
